# MyFreelancingWork

./: ComputerArchitectureQuiz.odt  README.md
AC_Computer Science_"Nov-20"-117/: COMP1350_FinalExam_Template.docx  Download_This_File.sql
AC_Computer Science_"Nov-20"-129/: GradingSystem.cs
AC_Computer Science_"Nov-20"-74/: README.txt  xml2json.ipynb  xml2json.py  xmltojson.py
AC_Computer Science_C Programming_"Nov-20"-42/: RandData.c  a
AC_Computer Science_HTML_"Oct-20"-259/Assignment-02/: Assignment 2 - Lyrics.docx  Styles.css  lyrics.html
AC_Computer Science_Programming_"Oct-20"-284/: CMakeLists.txt  Documentation.docx  Need for project.docx  Task-1.docx
AC_Computer Science_Programming_"Oct-20"-284/Array/: DequeADTArray.cpp  DequeADTArray.h  a
AC_Computer Science_Programming_"Oct-20"-284/LinkedList/: DequeADTList.cpp  DequeADTList.h  a
AC_Computer Science_Write up_"Oct-20"-194/: Problem3.doc  UpdatedWriteUp.docx  WriteUp.docx  WriteUp.odt
Project60-CSS/: CSS_Learning Activity-02.docx  index.html  style.css
Project61-ComputerNetworks/: Solutions.docx  Solutions.odt
[Your Name]_CSC105_GradedProject3/Project51-MenuDrivenProgram/: Menu.c  MenuDrivenProgram.docx  Menudriven.txt  a  pseudocode.txt
